force-app/main/default/objects/ssot__Contract__dlm/fields/ssot__AdditionalDiscountPercent__c.field-meta.xml
<CustomField>
    <fullName>ssot__AdditionalDiscountPercent__c</fullName>
    <label>Additional Discount Percent</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AdditionalDiscountPercent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>