force-app/main/default/objects/ssot__Contract__dlm/fields/ssot__AverageDiscountPercent__c.field-meta.xml
<CustomField>
    <fullName>ssot__AverageDiscountPercent__c</fullName>
    <label>Average Discount Percent</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AverageDiscountPercent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>