force-app/main/default/objects/ssot__Contract__dlm/fields/ssot__ContractOwnerId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContractOwnerId__c</fullName>
    <label>Contract Owner</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ContractOwnerId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>