force-app/main/default/objects/ssot__Contract__dlm/fields/ssot__ContractStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContractStatus__c</fullName>
    <label>Contract Status</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ContractStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>