force-app/main/default/objects/ssot__Contract__dlm/fields/ssot__ContractStatusCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContractStatusCategory__c</fullName>
    <label>Contract Status Category</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ContractStatusCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>