force-app/main/default/objects/ssot__Contract__dlm/fields/ssot__ContractTermNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContractTermNumber__c</fullName>
    <label>Contract Term</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ContractTermNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>