force-app/main/default/objects/ssot__Contract__dlm/fields/ssot__rel_1702009215612_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009215612_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract_ParentContractId_map_Contra_rel</label>
    <referenceTo>ssot__Contract__dlm</referenceTo>
    <relationshipLabel>Contract_ParentContractId_map_Contra_rel</relationshipLabel>
    <relationshipName>rel_1702009215612_end</relationshipName>
    <type>Lookup</type>
</CustomField>