force-app/main/default/objects/ssot__Contract__dlm/fields/ssot__rel_1702009436373_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009436373_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract_RootContractId_map_Contract_rel</label>
    <referenceTo>ssot__Contract__dlm</referenceTo>
    <relationshipLabel>Contract_RootContractId_map_Contract_rel</relationshipLabel>
    <relationshipName>rel_1702009436373_end</relationshipName>
    <type>Lookup</type>
</CustomField>