force-app/main/default/objects/ssot__Contract__dlm/fields/ssot__rel_1702009437642_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009437642_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract_CustomerAccountId_map_Accou_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>Contract_CustomerAccountId_map_Accou_rel</relationshipLabel>
    <relationshipName>rel_1702009437642_end</relationshipName>
    <type>Lookup</type>
</CustomField>