force-app/main/default/objects/ssot__Contract__dlm/fields/ssot__RootContractId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RootContractId__c</fullName>
    <label>Root Contract</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RootContractId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>