force-app/main/default/objects/ssot__Contract__dlm/fields/ssot__ShipToAddressId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShipToAddressId__c</fullName>
    <label>Ship To Address</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ShipToAddressId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>