force-app/main/default/objects/ssot__Contract__dlm/fields/ssot__SpecialTerm__c.field-meta.xml
<CustomField>
    <fullName>ssot__SpecialTerm__c</fullName>
    <label>Special Term</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SpecialTerm</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>